@@ -96,9 +96,16 @@ system space.
         <!-- maven-surefire-plugin && maven-failsafe-plugin -->
         <!-- The server VM is expected to be less tolerant against
              multithreading bugs when running the tests.
-             512 MB is required to run the integration tests which use BZIP2
-             compression. -->
-        <argLine>-server -Xmx512m</argLine>
+             The server VM requires 650 MB to run the integration tests for
+             TAR.BZ2 archive files.
+             Setting -XX:+DisableExplicitGC would trigger an endless loop
+             because some tests check if the garbage collection and the
+             finalization kicked in to close() open I/O resources (streams,
+             channels etc).
+             See http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html .
+             See http://www.oracle.com/technetwork/java/tuning-139912.html#section4.2.5 .
+             -->
+        <argLine>-server -Xms650m -Xmx650m -XX:+UseParallelGC -XX:+UseBiasedLocking</argLine>
         <parallel>both</parallel>
 
         <!-- maven-javadoc-plugin -->
